# NM-lab-CubicSpline

./: README.md  pyproject.toml
src/cubic_spline/: GUI.py  main.py  splines.py
